CSS cleanup complete:   - All custom CSS consolidated into one file.   - Made BulmaCSS the foundation style and framework.   - Went through and moved everything to the new framework and eliminated custom CSS where reasonable.   - Custom CSS cut by almost two-thirds.   - User settings modal left alone until I'm ready to expand it.   - Made some tweaks to translation strings as I went, but a dedicated pass will be necessary in the future.

--- a/public/locales/en/apfront_old.json
+++ b/public/locales/en/apfront_old.json
@@ -1,8 +1,13 @@
 {
     "Abstract Play": "Abstract Play",
     "Board": "Board",
+    "ChallengeDetails": "Challenge details",
+    "ChooseAnnotations": "Annotate?",
+    "Color": "Select color scheme",
     "ColorBlindLong": "Colour-blind-friendly colours (4 max)",
     "ColorPatternsLong": "Black-and-white patterns (10 max)",
+    "CommentsTooLong": "You are approaching that max total size of comments for a game. Soon new comments won't be accepted.",
+    "ConfigureClock": "Clock Settings",
     "DisplaySettings": "Display Settings",
     "Generic login error message": "An error occurred while trying to log in. If the problem persists, please contact the system administrator.",
     "Language": "Preferred language",
@@ -16,7 +21,10 @@
     "Player": "Player",
     "Rotate": "Rotate board",
     "SelectOpponents": "Please select {{count}} opponents",
+    "StandardChallenge": "Standard challenge: you select opponents to challenge.",
     "StandardColorsLong": "Standard colours (9 max)",
+    "StandingChallenge": "This will be a standing challenge. Anyone can accept.",
+    "StandingChallengeLabel": "Standing challenge?",
     "Variant": "Variant",
     "Variants": "Variants",
     "Welcome": "Welcome to Abstract Play!"
