--- a/public/locales/fr/apfront_old.json
+++ b/public/locales/fr/apfront_old.json
@@ -5,11 +5,16 @@
     "ChallengeDescriptionNoVariantsAccepter": "[FR] You accepted a challenge from {{challenger}} for a game of {{game}}.",
     "ChallengeDescriptionVariants": "[FR] You issued a challenge for a game of {{game}} with variants {{variants}}.",
     "ChallengeDescriptionVariantsAccepter": "[FR] You accepted a challenge from {{challenger}} for a game of {{game}} with variants {{variants}}.",
+    "ChallengeDetails": "[FR] Challenge details:",
     "ChallengeResponseDescNoVars": "[FR] {{opp}} challenged you to a game of {{game}} with no variants",
     "ChallengeResponseDescVars": "[FR] {{opp}} challenged you to a game of {{game}} with variants: {{variants}}",
     "ChallengeResponseDescVars1": "[FR] {{opp}} challenged you to a game of {{game}} with variant: {{variants}}",
+    "ChooseAnnotations": "[FR] Annotate?",
+    "Color": "[FR] Select color scheme",
     "ColorBlindLong": "[FR] Colour-blind-friendly colours (4 max)",
     "ColorPatternsLong": "[FR] Black-and-white patterns (10 max)",
+    "CommentsTooLong": "[FR] You are approaching that max total size of comments for a game. Soon new comments won't be accepted.",
+    "ConfigureClock": "[FR] Clock Settings",
     "DisplaySettings": "[FR] Display Settings",
     "Generic login error message": "[FR] An error occurred while trying to log in. If the problem persists, please contact the system administrator.",
     "Language": "[FR] Preferred language",
@@ -23,7 +28,10 @@
     "Player": "[FR] Player",
     "Rotate": "[FR] Rotate board",
     "SelectOpponents": "[FR] Please select {{count}} opponents",
+    "StandardChallenge": "",
     "StandardColorsLong": "[FR] Standard colours (9 max)",
+    "StandingChallenge": "",
+    "StandingChallengeLabel": "",
     "TwoPlayersChallengeDescriptionNoVariants": "[FR] You challenged {{other}} to a game of {{game}}.",
     "TwoPlayersChallengeDescriptionVariants": "[FR] You challenged {{other}} to a game of {{game}} with variants {{variants}}.",
     "Variant": "[FR] Variant",
