--- a/public/locales/it/apfront.json
+++ b/public/locales/it/apfront.json
@@ -13,7 +13,6 @@
     "ChallengeClock": "[IT] The clock start time will be {{start}} hours, incremented by {{inc}} hours after each move, with a maximum of {{max}} hours.",
     "ChallengeDescription": "",
     "ChallengeDescriptionAccepter": "",
-    "ChallengeDetails": "[IT] Challenge details:",
     "ChallengedNoOthers": "[IT] {{game}}, no other players yet.",
     "ChallengedOthers": "[IT] {{game}}, other players: {{others}}",
     "ChallengedTwoPlayers": "[IT] {{game}} against {{other}}",
@@ -23,9 +22,13 @@
     "ChallengerFirst": "",
     "ChallengerNotes": "[IT] Challenger notes: ",
     "ChallengerSecond": "",
+    "ChallengeType": "",
+    "ChallengeTypeOpen": "",
+    "ChallengeTypeOpenDescription": "",
+    "ChallengeTypeTargeted": "",
+    "ChallengeTypeTargetedDescription": "",
     "Change": "[IT] Change",
     "ChangeRenderOptions": "[IT] Change board display options",
-    "ChooseAnnotations": "[IT] Annotate?",
     "ChooseClockHard": "[IT] Hard Clock?",
     "ChooseClockIncrement": "[IT] Clock increment",
     "ChooseClockMax": "[IT] Clock max",
@@ -38,11 +41,9 @@
     "Claim": "[IT] Claim",
     "ClaimTimeOut": "[IT] Claim win on time",
     "Close": "[IT] Close",
-    "Color": "[IT] Select color scheme",
     "ColorBlind": "[IT] Colour blind",
     "ColorPatterns": "[IT] Black and white",
     "Comment": "[IT] Comment",
-    "CommentsTooLong": "[IT] You are approaching that max total size of comments for a game. Soon new comments won't be accepted.",
     "CommentTooLong": "[IT] Comments can be at most 4K characters",
     "CompletedGames": "[IT] Completed Games",
     "CompletedGamesCount_one": "",
@@ -50,7 +51,6 @@
     "CompletedGamesCount_other": "",
     "CompletedGamesList": "",
     "CompleteMove": "[IT] Complete move",
-    "ConfigureClock": "[IT] Clock Settings",
     "ConfirmResign": "[IT] Confirm resignation",
     "ConfirmResignDesc": "[IT] Are you sure you want to resign?",
     "ConfirmTimeout": "[IT] Out of time",
@@ -71,6 +71,7 @@
     "GameAgainst": "[IT] {{game}} against {{opp}}",
     "GameIsOver": "[IT] The game has ended",
     "Games": "[IT] Games",
+    "GameSummary": "",
     "GoBegin": "[IT] Show beginning of game. Keys: Home or 'h'.",
     "GoCurrent": "[IT] Show current position. Keys: End or 'l'.",
     "GoNext": "[IT] Show next move (and first variant if any). Keys: right arrow or 'k'.",
@@ -125,9 +126,12 @@
     "PickVariant": "[IT] Select a variant",
     "PlayersAccepted": "[IT] So far the following players are willing to participate in the game: {{others}}.",
     "ProfileAnon": "[IT] Would you like to be anonymous?",
+    "ProfileAnonHelp": "",
     "ProfileConsent": "[IT] Do you consent to the Abstract Play's terms of service and the privacy policy?",
     "ProfileCountry": "[IT] 2 Character Country code of where you want to tell people you're from",
+    "ProfileCountryHelp": "",
     "ProfileName": "[IT] Your desired display name. It must be unique across names currently in use and those recently used.",
+    "ProfileNameHelp": "",
     "ProfileTagline": "[IT] A free-form tagline (255 characters max)",
     "Random": "",
     "RatedGame": "",
@@ -152,17 +156,15 @@
     "Select": "[IT] select",
     "SelectAGame": "[IT] Please select a game",
     "SelectAnOpponent": "[IT] Please select an opponent",
+    "SelectGameDropdown": "",
     "SelectOpponents_one": "",
     "SelectOpponents_many": "",
     "SelectOpponents_other": "",
     "SelectPlayerCount": "",
     "SelectSeating": "[IT] Select seating, that is in what order players will start the game.",
     "SoftTime": "[IT] No hard time: a loss on time need to be claimed by the opponent.",
-    "StandardChallenge": "",
     "StandardColors": "[IT] Standard",
-    "StandingChallenge": "",
     "StandingChallengeDescription": "",
-    "StandingChallengeLabel": "",
     "StandingChallenges": "",
     "StandingChallenges2": "",
     "StandingChallengesCount_one": "",
