--- a/public/locales/it/apfront_old.json
+++ b/public/locales/it/apfront_old.json
@@ -5,11 +5,16 @@
     "ChallengeDescriptionNoVariantsAccepter": "[IT] You accepted a challenge from {{challenger}} for a game of {{game}}.",
     "ChallengeDescriptionVariants": "[IT] You issued a challenge for a game of {{game}} with variants {{variants}}.",
     "ChallengeDescriptionVariantsAccepter": "[IT] You accepted a challenge from {{challenger}} for a game of {{game}} with variants {{variants}}.",
+    "ChallengeDetails": "[IT] Challenge details:",
     "ChallengeResponseDescNoVars": "[IT] {{opp}} challenged you to a game of {{game}} with no variants",
     "ChallengeResponseDescVars": "[IT] {{opp}} challenged you to a game of {{game}} with variants: {{variants}}",
     "ChallengeResponseDescVars1": "[IT] {{opp}} challenged you to a game of {{game}} with variant: {{variants}}",
+    "ChooseAnnotations": "[IT] Annotate?",
+    "Color": "[IT] Select color scheme",
     "ColorBlindLong": "[IT] Colour-blind-friendly colours (4 max)",
     "ColorPatternsLong": "[IT] Black-and-white patterns (10 max)",
+    "CommentsTooLong": "[IT] You are approaching that max total size of comments for a game. Soon new comments won't be accepted.",
+    "ConfigureClock": "[IT] Clock Settings",
     "DisplaySettings": "[IT] Display Settings",
     "Generic login error message": "[IT] An error occurred while trying to log in. If the problem persists, please contact the system administrator.",
     "Language": "[IT] Preferred language",
@@ -23,7 +28,10 @@
     "Player": "[IT] Player",
     "Rotate": "[IT] Rotate board",
     "SelectOpponents": "[IT] Please select {{count}} opponents",
+    "StandardChallenge": "",
     "StandardColorsLong": "[IT] Standard colours (9 max)",
+    "StandingChallenge": "",
+    "StandingChallengeLabel": "",
     "TwoPlayersChallengeDescriptionNoVariants": "[IT] You challenged {{other}} to a game of {{game}}.",
     "TwoPlayersChallengeDescriptionVariants": "[IT] You challenged {{other}} to a game of {{game}} with variants {{variants}}.",
     "Variant": "[IT] Variant",
