Filled in some empty strings. Added a 'hide details' checkbox to the intro screen. Updated the footer

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -85,6 +85,7 @@
     "HelpClockStart": "Time on clock at the start of the game.",
     "HelpRated": "This game will be rated.",
     "HelpUnRated": "This game will not be rated.",
+    "HideDetails": "Hide details",
     "History": "History",
     "IncludeAcceptDrawOffer": "a draw has been offered. Do you accept?",
     "IncludeDrawOffer": "include draw offer with move",
@@ -150,13 +151,13 @@
     "seatingMeSecond": "Your opponent will play first.",
     "seatingRandom": "Seating will be random.",
     "SeatingRandom": "Random",
-    "Select": "",
+    "Select": "Select",
     "SelectAGame": "Please select a game",
     "SelectAnOpponent": "Please select an opponent",
     "SelectGameDropdown": "select a game",
-    "SelectOpponents_one": "",
-    "SelectOpponents_other": "",
-    "SelectPlayerCount": "",
+    "SelectOpponents_one": "Select an opponent.",
+    "SelectOpponents_other": "Select {{count}} opponents.",
+    "SelectPlayerCount": "Select a number of players for this game.",
     "SelectSeating": "Select seating, that is in what order players will start the game.",
     "SoftTime": "No hard time: a loss on time needs to be claimed by the opponent.",
     "StandardColors": "Standard",
@@ -189,13 +190,11 @@
     "tblHeaderSeating": "Seating",
     "tblHeaderStarted": "Game started",
     "tblHeaderVariants": "Variants",
-    "ThankYouExclaim": "Thank you!",
     "TimeRemaining": "Time remaining",
     "ToMove": "{{player}} to move.",
     "TwoPlayersChallengeDescription": "You challenged {{other}} to a game of {{game}}",
     "UnratedGame": "This will be an unrated game.",
     "UserSettings": "User Settings",
-    "ValueForValue": "We believe in the \"value for value\" model. If you find this site valuable, consider a donation proportional to that value:",
     "View": "View",
     "Waiting": "Waiting on other players to submit their moves",
     "WaitingResponse": "Waiting on response",
