--- a/public/locales/en/apfront_old.json
+++ b/public/locales/en/apfront_old.json
@@ -25,6 +25,8 @@
     "StandardColorsLong": "Standard colours (9 max)",
     "StandingChallenge": "This will be a standing challenge. Anyone can accept.",
     "StandingChallengeLabel": "Standing challenge?",
+    "ThankYouExclaim": "Thank you!",
+    "ValueForValue": "We believe in the \"value for value\" model. If you find this site valuable, consider a donation proportional to that value:",
     "Variant": "Variant",
     "Variants": "Variants",
     "Welcome": "Welcome to Abstract Play!"
