--- a/public/locales/it/apfront.json
+++ b/public/locales/it/apfront.json
@@ -87,6 +87,7 @@
     "HelpClockStart": "[IT] Time on clock at the start of the game.",
     "HelpRated": "",
     "HelpUnRated": "",
+    "HideDetails": "",
     "History": "[IT] History",
     "IncludeAcceptDrawOffer": "[IT] a draw has been offered. Do you accept?",
     "IncludeDrawOffer": "[IT] include draw offer with move",
@@ -194,13 +195,11 @@
     "tblHeaderSeating": "",
     "tblHeaderStarted": "",
     "tblHeaderVariants": "",
-    "ThankYouExclaim": "",
     "TimeRemaining": "[IT] Time remaining: ",
     "ToMove": "[IT] {{player}} to move.",
     "TwoPlayersChallengeDescription": "",
     "UnratedGame": "",
     "UserSettings": "[IT] User Settings",
-    "ValueForValue": "",
     "View": "[IT] View",
     "Waiting": "[IT] Waiting on other players to submit their moves",
     "WaitingResponse": "[IT] Waiting on response",
