--- a/public/locales/fr/apfront.json
+++ b/public/locales/fr/apfront.json
@@ -87,6 +87,7 @@
     "HelpClockStart": "[FR] Time on clock at the start of the game.",
     "HelpRated": "",
     "HelpUnRated": "",
+    "HideDetails": "",
     "History": "[FR] History",
     "IncludeAcceptDrawOffer": "[FR] a draw has been offered. Do you accept?",
     "IncludeDrawOffer": "[FR] include draw offer with move",
@@ -194,13 +195,11 @@
     "tblHeaderSeating": "",
     "tblHeaderStarted": "",
     "tblHeaderVariants": "",
-    "ThankYouExclaim": "",
     "TimeRemaining": "[FR] Time remaining: ",
     "ToMove": "[FR] {{player}} to move.",
     "TwoPlayersChallengeDescription": "",
     "UnratedGame": "",
     "UserSettings": "[FR] User Settings",
-    "ValueForValue": "",
     "View": "[FR] View",
     "Waiting": "[FR] Waiting on other players to submit their moves",
     "WaitingResponse": "[FR] Waiting on response",
