Rest to current position.

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -138,6 +138,7 @@
     "RatedPlayersCount_other": "rated players",
     "RatingsList": "{{name}} Ratings",
     "Reject": "Reject",
+    "ResetExploration": "Back to current position",
     "Resign": "Resign",
     "Respond": "Respond",
     "Revoke": "Revoke",
