Incorporated ToS and privacy policy into footer

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -91,13 +91,13 @@
     "IncludeDrawOffer": "include draw offer with move",
     "Increment": "increment {{inc}} hours",
     "IssueChallenge": "Issue a new challenge",
+    "Legal": "Legal",
     "Level": "Where would you like these colors applied?",
     "LevelAll": "For all games",
     "LevelGame": "Only for this game",
     "LevelMetaGame": "For all {{game}} games",
     "LogIn": "Log In",
     "LogOut": "Log Out",
-    "Losing": "Mark this move as losing",
     "MakeMove": "Make a move",
     "MaxTime": "max time {{max}} hours",
     "Moves": "Moves",
@@ -154,7 +154,6 @@
     "SeatingRandom": "Random",
     "Select": "Select",
     "SelectAGame": "Please select a game",
-    "SelectAnOpponent": "Please select an opponent",
     "SelectGameDropdown": "select a game",
     "SelectOpponents_one": "Select an opponent.",
     "SelectOpponents_other": "Select {{count}} opponents.",
