--- a/public/locales/en/apfront_old.json
+++ b/public/locales/en/apfront_old.json
@@ -12,6 +12,7 @@
     "Generic login error message": "An error occurred while trying to log in. If the problem persists, please contact the system administrator.",
     "Language": "Preferred language",
     "Login Error": "Login Error",
+    "Losing": "Mark this move as losing",
     "Make time for games": "Make time for games",
     "MarkAsLoss": "Mark as loss",
     "MarkAsWin": "Mark as win",
@@ -20,6 +21,7 @@
     "OppsMove": "Opponent's move",
     "Player": "Player",
     "Rotate": "Rotate board",
+    "SelectAnOpponent": "Please select an opponent",
     "SelectOpponents": "Please select {{count}} opponents",
     "StandardChallenge": "Standard challenge: you select opponents to challenge.",
     "StandardColorsLong": "Standard colours (9 max)",
