--- a/public/locales/fr/apfront.json
+++ b/public/locales/fr/apfront.json
@@ -93,13 +93,13 @@
     "IncludeDrawOffer": "[FR] include draw offer with move",
     "Increment": "[FR] increment {{inc}} hours",
     "IssueChallenge": "[FR] Issue a new challenge",
+    "Legal": "",
     "Level": "[FR] Where would you like these colors applied?",
     "LevelAll": "[FR] For all games",
     "LevelGame": "[FR] Only for this game",
     "LevelMetaGame": "[FR] For all {{game}} games",
     "LogIn": "[FR] Log In",
     "LogOut": "[FR] Log Out",
-    "Losing": "[FR] Mark this move as losing",
     "MakeMove": "[FR] Make a move",
     "MaxTime": "[FR] max time {{max}} hours",
     "Moves": "[FR] Moves",
@@ -141,6 +141,7 @@
     "RatedPlayersCount_other": "",
     "RatingsList": "",
     "Reject": "[FR] Reject",
+    "ResetExploration": "",
     "Resign": "[FR] Resign",
     "Respond": "[FR] Respond",
     "Revoke": "",
@@ -156,7 +157,6 @@
     "SeatingRandom": "[FR] Random",
     "Select": "[FR] select",
     "SelectAGame": "[FR] Please select a game",
-    "SelectAnOpponent": "[FR] Please select an opponent",
     "SelectGameDropdown": "",
     "SelectOpponents_one": "",
     "SelectOpponents_many": "",
