--- a/public/locales/fr/apfront_old.json
+++ b/public/locales/fr/apfront_old.json
@@ -19,6 +19,7 @@
     "Generic login error message": "[FR] An error occurred while trying to log in. If the problem persists, please contact the system administrator.",
     "Language": "[FR] Preferred language",
     "Login Error": "[FR] Login Error",
+    "Losing": "[FR] Mark this move as losing",
     "Make time for games": "[FR] Prenez le temps de jouer",
     "MarkAsLoss": "[FR] Mark as loss",
     "MarkAsWin": "[FR] Mark as win",
@@ -27,6 +28,7 @@
     "OppsMove": "[FR] Opponent's move",
     "Player": "[FR] Player",
     "Rotate": "[FR] Rotate board",
+    "SelectAnOpponent": "[FR] Please select an opponent",
     "SelectOpponents": "[FR] Please select {{count}} opponents",
     "StandardChallenge": "",
     "StandardColorsLong": "[FR] Standard colours (9 max)",
