--- a/public/locales/it/apfront.json
+++ b/public/locales/it/apfront.json
@@ -93,13 +93,13 @@
     "IncludeDrawOffer": "[IT] include draw offer with move",
     "Increment": "[IT] increment {{inc}} hours",
     "IssueChallenge": "[IT] Issue a new challenge",
+    "Legal": "",
     "Level": "[IT] Where would you like these colors applied?",
     "LevelAll": "[IT] For all games",
     "LevelGame": "[IT] Only for this game",
     "LevelMetaGame": "[IT] For all {{game}} games",
     "LogIn": "[IT] Log In",
     "LogOut": "[IT] Log Out",
-    "Losing": "[IT] Mark this move as losing",
     "MakeMove": "[IT] Make a move",
     "MaxTime": "[IT] max time {{max}} hours",
     "Moves": "[IT] Moves",
@@ -141,6 +141,7 @@
     "RatedPlayersCount_other": "",
     "RatingsList": "",
     "Reject": "[IT] Reject",
+    "ResetExploration": "",
     "Resign": "[IT] Resign",
     "Respond": "[IT] Respond",
     "Revoke": "",
@@ -156,7 +157,6 @@
     "SeatingRandom": "[IT] Random",
     "Select": "[IT] select",
     "SelectAGame": "[IT] Please select a game",
-    "SelectAnOpponent": "[IT] Please select an opponent",
     "SelectGameDropdown": "",
     "SelectOpponents_one": "",
     "SelectOpponents_many": "",
