--- a/public/locales/it/apfront_old.json
+++ b/public/locales/it/apfront_old.json
@@ -19,6 +19,7 @@
     "Generic login error message": "[IT] An error occurred while trying to log in. If the problem persists, please contact the system administrator.",
     "Language": "[IT] Preferred language",
     "Login Error": "[IT] Login Error",
+    "Losing": "[IT] Mark this move as losing",
     "Make time for games": "Prendi il tempo per i giochi",
     "MarkAsLoss": "[IT] Mark as loss",
     "MarkAsWin": "[IT] Mark as win",
@@ -27,6 +28,7 @@
     "OppsMove": "[IT] Opponent's move",
     "Player": "[IT] Player",
     "Rotate": "[IT] Rotate board",
+    "SelectAnOpponent": "[IT] Please select an opponent",
     "SelectOpponents": "[IT] Please select {{count}} opponents",
     "StandardChallenge": "",
     "StandardColorsLong": "[IT] Standard colours (9 max)",
