Added game information button and modal to the play screen that lets you easily access game rules

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -7,6 +7,7 @@
     "Annotate": "Show last move indicators",
     "AnnotationLevel": "Where would you like this choice applied?",
     "AvailableGames": "Available Games",
+    "BoardSettings": "Change game board settings",
     "Cancel": "Cancel",
     "Challenge": "Challenge",
     "Challenge Details": "Challenge Details",
@@ -67,6 +68,8 @@
     "Error": "Error!",
     "Explore": "Explore",
     "GameAgainst": "{{game}} against {{opp}}",
+    "GameInfo": "Game information",
+    "GameInfoFor": "Game information for {{metaGame}}",
     "GameIsOver": "The game has ended",
     "Games": "Games",
     "GameSummary": "Chat log",
@@ -144,6 +147,7 @@
     "Revoke": "Revoke",
     "RevokeAcceptance": "Revoke acceptance",
     "RevokeChallenge": "Revoke challenge",
+    "RotateBoard": "Rotate board",
     "Save": "Save",
     "Seating": "Seating",
     "Seating1": "I play first",
