--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -59,9 +59,11 @@
     "CurrentGamesCount_one": "current game",
     "CurrentGamesCount_other": "current games",
     "CurrentGamesList": "Current {{name}} Games",
+    "DebugModal": "Debugging information",
     "DisplayName": "Display name",
     "DisplayNameChange": "The new name will only be used for new games, not existing or completed games.",
     "DisplayNameError": "{{name}} is not available, please choose a different name.",
+    "Download": "Download",
     "EMail": "e-mail",
     "EMailCode": "e-mailed code",
     "EnterMove": "Enter/Click a move",
