Added notification settings to user settings screen. Updating the backend code before pushing.

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -61,11 +61,13 @@
     "CurrentGamesList": "Current {{name}} Games",
     "DebugModal": "Debugging information",
     "DisplayName": "Display name",
+    "DisplayNameHelp": "Your display name is the name people will see. It is distinct from the username you use when logging in. The display name can contain special characters like diacritics. See the terms of service as they relate to display names.",
     "DisplayNameChange": "The new name will only be used for new games, not existing or completed games.",
     "DisplayNameError": "{{name}} is not available, please choose a different name.",
     "Download": "Download",
-    "EMail": "e-mail",
-    "EMailCode": "e-mailed code",
+    "EMail": "Email address",
+    "EMailCode": "Emailed code",
+    "EMailCodeHelp": "The login system just sent a code to the email address you provided. Please enter it here.",
     "EnterMove": "Enter/Click a move",
     "Error": "Error!",
     "Explore": "Explore",
@@ -116,6 +118,10 @@
     "NoStandingChallenges": "No standing challenges",
     "Notes": "Notes: ",
     "NotHardTime": "No hard limit",
+    "NotifyLabel-yourturn": "Your turn (twice daily)",
+    "NotifyLabel-challenges": "Challenges (every instance)",
+    "NotifyLabel-gameStart": "Game started (every instance)",
+    "NotifyLabel-gameEnd": "Game ended (every instance)",
     "NoWaitingResponse": "No challenges waiting on response",
     "NoYourMove": "No games waiting for your move.",
     "NumChallenge": "There will be {{num}} players in this game. {{players}}. Seating will be random.",
