--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -109,6 +109,7 @@
     "MyDashboard": "Dashboard",
     "NewChallenge": "New challenge",
     "NewProfile": "Create profile",
+    "NextGame": "Next game",
     "No": "No",
     "NoChallengeResponse": "No challenges needing a response",
     "NoOpponentMove": "No games waiting on opponent's move.",
@@ -197,6 +198,7 @@
     "tblHeaderStarted": "Game started",
     "tblHeaderVariants": "Variants",
     "TimeRemaining": "Time remaining",
+    "ToggleZoom": "Toggle zoom",
     "ToMove": "{{player}} to move.",
     "TwoPlayersChallengeDescription": "You challenged {{other}} to a game of {{game}}",
     "UnratedGame": "This will be an unrated game.",
