Let the user choose whether they want to explore or not.

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -70,6 +70,10 @@
     "EMailCodeHelp": "The login system just sent a code to the email address you provided. Please enter it here.",
     "EnterMove": "Enter/Click a move",
     "Error": "Error!",
+    "ExplorationSetting": "Exploration setting",
+    "ExploreNever": "Never explore",
+    "ExploreAsk": "Always ask",
+    "ExploreAlways": "Always explore",
     "Explore": "Explore",
     "GameAgainst": "{{game}} against {{opp}}",
     "GameInfo": "Game information",
@@ -119,6 +123,7 @@
     "NoStandingChallenges": "No standing challenges",
     "Notes": "Notes: ",
     "NotHardTime": "No hard limit",
+    "NotificationSettings": "Notification settings",
     "NotifyLabel-yourturn": "Your turn (twice daily)",
     "NotifyLabel-challenges": "Challenges (every instance)",
     "NotifyLabel-gameStart": "Game started (every instance)",
