--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -41,6 +41,7 @@
     "ChooseRated": "Rated?",
     "Claim": "Claim",
     "ClaimTimeOut": "Claim win on time",
+    "ClearMove": "Clear move input",
     "Close": "Close",
     "ColorBlind": "Colour blind",
     "ColorPatterns": "Black and white",
@@ -137,6 +138,7 @@
     "OpponentMove": "Opponent's move",
     "OtherPlayers": "So far the following other players are willing to participate in the game: {{others}}.",
     "OtherPlayersAccepted": "The following other players have already accepted: {{others}}",
+    "Or": "or",
     "PickAnyVariant": "Select any of",
     "PickOneVariant": "Select at most one of",
     "PickVariant": "Select variants",
