--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -116,6 +116,8 @@
     "MaxTime": "max time {{max}} hours",
     "Moves": "Moves",
     "MyDashboard": "Dashboard",
+    "NameBlank": "Please enter a name",
+    "NameNotAvailable": "The name {{name}} is not available.",
     "NewChallenge": "New challenge",
     "NewProfile": "Create profile",
     "NextGame": "Next game",
@@ -144,6 +146,7 @@
     "PickAnyVariant": "Select any of",
     "PickOneVariant": "Select at most one of",
     "PickVariant": "Select variants",
+    "PleaseConsent": "Your consent is needed!",
     "PlayersAccepted": "So far the following players are willing to participate in the game: {{others}}.",
     "ProfileAnon": "Would you like to be anonymous?",
     "ProfileAnonHelp": "Being anonymous means nobody will know who they're playing against, and your completed games will not be attributed to you. As a result, they will not be rated. Even if you change this setting later, past games cannot be reattributed to you.",
@@ -215,6 +218,7 @@
     "TimeRemaining": "Time remaining",
     "ToggleZoom": "Toggle zoom",
     "ToMove": "{{player}} to move.",
+    "ToS": "Terms of Service",
     "TwoPlayersChallengeDescription": "You challenged {{other}} to a game of {{game}}",
     "UnratedGame": "This will be an unrated game.",
     "UserSettings": "User Settings",
