--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -105,6 +105,7 @@
     "IncludeAcceptDrawOffer": "a draw has been offered. Do you accept?",
     "IncludeDrawOffer": "include draw offer with move",
     "Increment": "increment {{inc}} hours",
+    "InvokePie": "Invoke pie rule",
     "IssueChallenge": "Issue a new challenge",
     "Legal": "Legal",
     "Level": "Where would you like these colors applied?",
