Adding star feature to dev server for live testing

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -77,6 +77,7 @@
     "ExploreAlways": "Always explore",
     "Explore": "Explore",
     "ExportPNG": "Export PNG image",
+    "FilterStars": "Only show starred games",
     "GameAgainst": "{{game}} against {{opp}}",
     "GameInfo": "Game information",
     "GameInfoFor": "Game information for {{metaGame}}",
@@ -100,7 +101,7 @@
     "HelpClockStart": "Time on clock at the start of the game.",
     "HelpRated": "This game will be rated.",
     "HelpUnRated": "This game will not be rated.",
-    "HideDetails": "Hide details",
+    "HideDetails": "Hide descriptions",
     "History": "History",
     "InCheck": "{{player}} is in check!",
     "IncludeAcceptDrawOffer": "a draw has been offered. Do you accept?",
@@ -223,6 +224,8 @@
     "ToggleZoom": "Toggle zoom",
     "ToMove": "{{player}} to move.",
     "ToS": "Terms of Service",
+    "TotalStars_one": "Total star",
+    "TotalStars_other": "Total stars",
     "TwoPlayersChallengeDescription": "You challenged {{other}} to a game of {{game}}",
     "UnratedGame": "This will be an unrated game.",
     "UserSettings": "User Settings",
