Support alternate displays for games.

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -30,6 +30,7 @@
     "ChallengeTypeTargetedDescription": "You are challenging specific players.",
     "Change": "Change",
     "ChangeRenderOptions": "Change board display options",
+    "ChooseDisplay": "Choose how the board should be displayed",
     "ChooseClockHard": "Hard Time?",
     "ChooseClockIncrement": "Clock increment",
     "ChooseClockMax": "Clock max",
@@ -61,6 +62,7 @@
     "CurrentGamesCount_other": "current games",
     "CurrentGamesList": "Current {{name}} Games",
     "DebugModal": "Debugging information",
+    "DefaultDisplay": "Default display",
     "DisplayName": "Display name",
     "DisplayNameHelp": "Your display name is the name people will see. It is distinct from the username you use when logging in. The display name can contain special characters like diacritics. See the terms of service as they relate to display names.",
     "DisplayNameChange": "The new name will only be used for new games, not existing or completed games.",
