Add implementation notes to the front end

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -105,6 +105,7 @@
     "HelpUnRated": "This game will not be rated.",
     "HideDetails": "Hide descriptions",
     "History": "History",
+    "ImplementationNotes": "Implementation Notes",
     "InCheck": "{{player}} is in check!",
     "IncludeAcceptDrawOffer": "a draw has been offered. Do you accept?",
     "IncludeDrawOffer": "include draw offer with move",
