Created tabular games list with search, sort, and other features

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -43,6 +43,7 @@
     "Claim": "Claim",
     "ClaimTimeOut": "Claim win on time",
     "ClearMove": "Clear move input",
+    "ClickExpand": "Click to expand",
     "Close": "Close",
     "ColorBlind": "Colour blind",
     "ColorPatterns": "Black and white",
@@ -177,6 +178,7 @@
     "RevokeChallenge": "Revoke challenge",
     "RotateBoard": "Rotate board",
     "Save": "Save",
+    "Search": "Search",
     "Seating": "Seating",
     "Seating1": "I play first",
     "Seating2": "I play second",
