Standing challenge count ready for live testing

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -25,7 +25,7 @@
     "ChallengerSecond": "Challenger plays second",
     "ChallengeType": "Challenge type",
     "ChallengeTypeOpen": "Open",
-    "ChallengeTypeOpenDescription": "Anybody can accept this challenge, and the challenge will remain open until you rescind it.",
+    "ChallengeTypeOpenDescription": "Anybody can accept this challenge.",
     "ChallengeTypeTargeted": "Closed",
     "ChallengeTypeTargetedDescription": "You are challenging specific players.",
     "Change": "Change",
@@ -69,6 +69,10 @@
     "DisplayNameChange": "The new name will only be used for new games, not existing or completed games.",
     "DisplayNameError": "{{name}} is not available, please choose a different name.",
     "Download": "Download",
+    "Duration": "Duration",
+    "DurationHelp_one": "This challenge will expire after being accepted the first time.",
+    "DurationHelp_other": "This challenge will expire after being accepted {{count}} times.",
+    "DurationHelpPersistent": "This challenge will remain available until you revoke it.",
     "EMail": "Email address",
     "EMailCode": "Emailed code",
     "EMailCodeHelp": "The login system just sent a code to the email address you provided. Please enter it here.",
