Moved ratings and games lists to new sortable format

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -265,6 +265,7 @@
     "UnratedGame": "This will be an unrated game.",
     "UserSettings": "User Settings",
     "View": "View",
+    "VisitGame": "Visit game",
     "Waiting": "Waiting on other players to submit their moves",
     "WaitingResponse": "Waiting on response",
     "WelcomePlayer": "Dashboard for {{me}}",
