--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -64,7 +64,7 @@
     "CurrentGamesList": "Current {{name}} Games",
     "DebugModal": "Debugging information",
     "DefaultDisplay": "Default display",
-    "DisablePush": "Disable push notifications",
+    "DisablePush": "Push notifications are currently enabled",
     "DisplayName": "Display name",
     "DisplayNameHelp": "Your display name is the name people will see. It is distinct from the username you use when logging in. The display name can contain special characters like diacritics. See the terms of service as they relate to display names.",
     "DisplayNameChange": "The new name will only be used for new games, not existing or completed games.",
@@ -77,7 +77,7 @@
     "EMail": "Email address",
     "EMailCode": "Emailed code",
     "EMailCodeHelp": "The login system just sent a code to the email address you provided. Please enter it here.",
-    "EnablePush": "Allow push notifications",
+    "EnablePush": "Push notifications are currently disabled",
     "EnterMove": "Enter/Click a move",
     "Error": "Error!",
     "ExplorationSetting": "Exploration setting",
