Added 'News' page

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -135,6 +135,8 @@
     "NameNotAvailable": "The name {{name}} is not available.",
     "NewChallenge": "New challenge",
     "NewProfile": "Create profile",
+    "News": "News",
+    "NewsPreamble": "The authoritative and most up-to-date source of Abstract Play news is on our Discord Server (https://discord.abstractplay.com). Please come join us!",
     "NextGame": "Next game",
     "No": "No",
     "NoChallengeResponse": "No challenges needing a response",
