--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -53,7 +53,11 @@
     "CompletedGamesCount_one": "completed game",
     "CompletedGamesCount_other": "completed games",
     "CompletedGamesList": "Completed {{name}} Games",
+    "CompletedGamesHelp": "To keep the dashboard manageable, games drop off this list 48 hours after the \"last seen\" date. Click the Clear button to remove it immediately. New chat will cause older games to resurface, restarting the 48-hour clock. Visit the Games page to access older completed games.",
     "CompleteMove": "Complete move",
+    "ConfirmMove": "Confirm move submission",
+    "ConfirmMoveDesc": "Are you sure you want to submit this move?",
+    "ConfirmMoveHelp": "If you prefer not to get asked for confirmation, you can disable this in your user settings.",
     "ConfirmResign": "Confirm resignation",
     "ConfirmResignDesc": "Are you sure you want to resign?",
     "ConfirmTimeout": "Out of time",
@@ -64,6 +68,7 @@
     "CurrentGamesList": "Current {{name}} Games",
     "DebugModal": "Debugging information",
     "DefaultDisplay": "Default display",
+    "DisableMoveConfirm": "Ask for confirmation before a move is submitted",
     "DisablePush": "Push notifications are currently enabled",
     "DisplayName": "Display name",
     "DisplayNameHelp": "Your display name is the name people will see. It is distinct from the username you use when logging in. The display name can contain special characters like diacritics. See the terms of service as they relate to display names.",
@@ -77,6 +82,7 @@
     "EMail": "Email address",
     "EMailCode": "Emailed code",
     "EMailCodeHelp": "The login system just sent a code to the email address you provided. Please enter it here.",
+    "EnableMoveConfirm": "Do not ask for confirmation before a move is submitted",
     "EnablePush": "Push notifications are currently disabled",
     "EnterMove": "Enter/Click a move",
     "Error": "Error!",
