Notes feature ready for live testing.

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -99,6 +99,7 @@
     "GameIsOver": "The game has ended",
     "GameIsOver1": "The game has ended. {{winner}} won.",
     "GameIsOver2": "The game has ended. The following players won: {{winners}} and {{lastWinner}}.",
+    "GameNoteModal": "Game note",
     "Games": "Games",
     "GameSummary": "Chat log",
     "GoBegin": "Show beginning of game. Keys: Home or 'h'.",
@@ -271,6 +272,7 @@
     },
     "TwoPlayersChallengeDescription": "You challenged {{other}} to a game of {{game}}",
     "UnratedGame": "This will be an unrated game.",
+    "UpdateNote": "Update game note",
     "UserSettings": "User Settings",
     "View": "View",
     "VisitGame": "Visit game",
