Stats: Pushing to dev server

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -216,6 +216,13 @@
     "StandingChallenges2": "Standing Challenges",
     "StandingChallengesCount_one": "standing challenge",
     "StandingChallengesCount_other": "standing challenges",
+    "Statistics": "Statistics",
+    "stats_module_avgRatings": "Average ratings",
+    "stats_module_gameStats": "Game statistics",
+    "stats_module_highestSingle": "Highest single rating",
+    "stats_module_numPlays": "Play statistics",
+    "stats_module_playerStats": "Player statistics",
+    "stats_module_topPlayers": "Top players",
     "Status": "Status",
     "Submit": "Submit",
     "SubmitMove": "Submit your move: {{move}}",
